fix read btn and book details spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,21 +40,20 @@ body {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   padding: 20px;
+  align-items: center;
   width: 100%;
-  gap: 30px;
+  gap: 20px;
 }
 .card {
-  height: 460px;
+  height: 500px;
   width: 280px;
   background-color: var(--card-background);
   /* background-color: #edf2f4; */
   border-radius: 16px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-
+  max-width: 300px;
   transition: transform 0.2s;
 }
 .card:hover {
@@ -65,6 +64,7 @@ body {
   font-size: 14px;
   color: #48361d;
   text-align: center;
+  padding-left: 20px;
 }
 .btn {
   display: flex;
@@ -72,6 +72,7 @@ body {
   justify-content: center;
   gap: 12px;
   margin-top: auto;
+  padding-bottom: 15px;
 }
 .read-btn,
 .delete-btn {
@@ -130,8 +131,10 @@ body {
 }
 .book-details {
   flex-grow: 1;
-  margin-top: 0;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .book-img {
@@ -144,8 +147,18 @@ body {
 
 .title-text {
   font-weight: bold;
-  font-size: 16px;
-  color: #222;
+  font-size: 1rem;
+  line-height: 1.2;
+  text-align: center;
+
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: 2.4em;
+  padding: 0 10px;
 }
 
 .header-logo {
@@ -194,9 +207,36 @@ body {
   box-sizing: border-box;
 }
 
+.dialog-btn {
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 25px;
+}
 #confirmBtn {
-  width: 100%;
   margin-top: 10px;
+  padding: 15px;
+  border-radius: 10px;
+  border: none;
+  background-color: var(--button-confirm);
+  color: white;
+  font-weight: 700;
+  width: 100px;
+}
+.cancel-btn {
+  margin-top: 10px;
+  padding: 15px;
+  border-radius: 10px;
+  border: none;
+  background-color: var(--button-delete);
+  color: white;
+  font-weight: 700;
+  width: 100px;
+}
+#confirmBtn:hover {
+  transform: translateY(-5px);
+}
+.cancel-btn:hover {
+  transform: translateY(-5px);
 }
 
 label {
@@ -256,4 +296,52 @@ label {
 
 .toggle-switch input:checked + .slider:before {
   transform: translateX(22px);
+}
+
+.read-text.read {
+  color: green;
+}
+
+.read-text.not-read {
+  color: red;
+}
+
+.read-btn.read {
+  background-color: transparent;
+  border: 2px solid #46443d;
+  color: white;
+  color: #46443d;
+  padding: auto 10px 10px 10px;
+  align-self: flex-end;
+}
+
+.read-btn.not-read {
+  padding: auto 10px 5px 10px;
+  border: 2px solid #4caf50;
+
+  background-color: #4caf50; /* green */
+  color: white;
+}
+
+/* footer */
+
+.footer {
+  width: 100%;
+  text-align: center;
+  padding: 16px;
+  background-color: transparent;
+  color: #48361d;
+  font-size: 0.9rem;
+  margin-top: 40px;
+  font-weight: 500;
+}
+
+.footer a {
+  color: #48361d;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.footer a:hover {
+  text-decoration: underline;
 }
